Add exercise 5 solution

--- a/assignment-1/natural_computing_assignment-1.tex
+++ b/assignment-1/natural_computing_assignment-1.tex
@@ -130,6 +130,12 @@ Let the algorithm produce as outputs:
 	\end{equation}
 	\textbf{Solution:}\\
 
+	Function set: $\{\vee,\wedge,\rightarrow,\leftrightarrow\}$\\
+	Terminal set: $\{x,y,z,true,(false)\}$
+	\begin{figure}[ht!]
+	\centering
+  	\includegraphics[width=0.6\textwidth]{images/s-expression.png}
+	\end{figure}
 
 	% Task 6
 	\item (Genetic Programming) Implement a GP program for finding a symbolic expression that fits the following data:
