Updated tex file because of a typo

--- a/assignment-3/natural_computing_assignment-3.tex
+++ b/assignment-3/natural_computing_assignment-3.tex
@@ -112,7 +112,7 @@ To facilitate calculation, we will ignore the fact that $r_1$ and $r_2$ are rand
 		
 		
 		% 5b)
-		\item Consider the benchmark Sudoku problems are available at \url{http://lipas.uwasa.fi/~timan/sudoku/}. Run your ACO on the following benchmark instances \textsf{10a.txt, s10b.txt, s11a.txt, s11b.txt}. Report and discuss the results.\\
+		\item Consider the benchmark Sudoku problems are available at \url{http://lipas.uwasa.fi/~timan/sudoku/}. Run your ACO on the following benchmark instances \textsf{s10a.txt, s10b.txt, s11a.txt, s11b.txt}. Report and discuss the results.\\
 		 \textbf{Solution:}\\
 		
 		
